:new:更改工具名称为Y站导航

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>聚网吧_聚集好网址</title>
+<title>导航 - Y站</title>
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="applicable-device" content="pc,mobile">
 <meta name="MobileOptimized" content="width"/>
@@ -92,13 +92,13 @@ h1{
 <body>
 <a class="m-back" href="//www.dm126.com">返回</a>
 <a class="m-web" href="/v/f/">收藏夹</a>
-<h1>工具</h1>
+<h1>Y站导航</h1>
 <div id="mAddressBar"></div>
 <div class="pure-g m-list">
 <a class="m-head">学习</a><a href="//www.cilin.org/zidian/shouxie.html">手写查字</a><a href="//fanyi.baidu.com">翻译</a>
 <a href="//daan.xuezizhai.com/index.php?s=80&module=answer&view=search">找答案</a><a class="m-head">游戏</a><a href="//cha.17173.com">游戏数据</a>
 <a href="//www.lolhelper.cn/">LOL隐藏分</a><a href="/v/s/">游戏攻略</a>
-<a class="m-head"></a><a href="//b.juw8.com/100749">小游戏</a><a href="//www.dm126.com">分享助手</a><a href="//l.juw.best">直播 电视<sup></sup></a>
+<a class="m-head"></a><a href="//b.juw8.com/100749">小游戏</a><a href="//www.dm126.com">分享助手</a><a href="//live.yzhan.in">直播 电视<sup></sup></a>
 <a class="m-head">神器</a><a href="//m.99baiduyun.com">网盘搜索</a><a href="//www.ciligou.top">磁力BT</a><a href="//www.jiumodiary.com">电子书搜索</a>
 <a class="m-head"></a><a href="//m.bookbao99.net">VIP小说</a><a href="//www.ciding.fun">VIP音乐</a><a href="//www.laodouban.com">云点播</a>
 <a class="m-head">实用</a><a href="//speed.neu.edu.cn">网速测试</a><a href="//m.oacn.org/sfz/">身份证号</a><a href="//catbox.moe">图床网盘</a>
