--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ h1{
 </head>
 
 <body>
-<a class="m-back" href="//www.dm126.com">返回</a>
+<a class="m-back" href="//app.yzhan.in">返回</a>
 <a class="m-web" href="/v/f/">收藏夹</a>
 <h1>Y站导航</h1>
 <div id="mAddressBar"></div>
@@ -98,7 +98,7 @@ h1{
 <a class="m-head">学习</a><a href="//www.cilin.org/zidian/shouxie.html">手写查字</a><a href="//fanyi.baidu.com">翻译</a>
 <a href="//daan.xuezizhai.com/index.php?s=80&module=answer&view=search">找答案</a><a class="m-head">游戏</a><a href="//cha.17173.com">游戏数据</a>
 <a href="//www.lolhelper.cn/">LOL隐藏分</a><a href="/v/s/">游戏攻略</a>
-<a class="m-head"></a><a href="//b.juw8.com/100749">小游戏</a><a href="//www.dm126.com">分享助手</a><a href="//live.yzhan.in">直播 电视<sup></sup></a>
+<a class="m-head"></a><a href="//b.juw8.com/100749">小游戏</a><a href="//app.yzhan.in">分享助手</a><a href="//live.yzhan.nl">直播 电视<sup></sup></a>
 <a class="m-head">神器</a><a href="//m.99baiduyun.com">网盘搜索</a><a href="//www.ciligou.top">磁力BT</a><a href="//www.jiumodiary.com">电子书搜索</a>
 <a class="m-head"></a><a href="//m.bookbao99.net">VIP小说</a><a href="//www.ciding.fun">VIP音乐</a><a href="//www.laodouban.com">云点播</a>
 <a class="m-head">实用</a><a href="//speed.neu.edu.cn">网速测试</a><a href="//m.oacn.org/sfz/">身份证号</a><a href="//catbox.moe">图床网盘</a>
@@ -106,7 +106,7 @@ h1{
 <a class="m-head"></a><a href="//www.cn-ki.net">免费论文下载</a><a href="//www.hiwenku.com">百度文库下载</a><a></a>
 <a class="m-head"></a><a href="//tool.manmanbuy.com/m/history.aspx">查商品最低价</a><a href="//m.pingshu8.com/">听评书相声</a><a></a>
 <a class="m-head">装扮</a><a href="//b.juw8.com/萌头像">萌头像</a><a href="//m.win4000.com">壁纸</a><a href="//m.13400.com">铃声</a>
-<a class="m-head"></a><a href="//www.qcygf.com/h/">花体字</a><a href="//m.3dmgame.com/dl/">单机游戏下载</a><a href="/v/led/">LED滚动字</a>
+<a class="m-head"></a><a href="//share.yzhan.nl/h/">花体字</a><a href="//m.3dmgame.com/dl/">单机游戏下载</a><a href="/v/led/">LED滚动字</a>
 <a class="m-head">动漫</a><a href="//hmacg.cn/bangumi/">追番表</a><a href="//paintschainer.preferred.tech">线稿自动上色</a><a href="//make.girls.moe">女孩头像定制</a>
 <a class="m-head m-b">MTF</a><a href="//b.juw8.com">发帖得❤</a><a href="//b.juw8.com/weal">赚❤</a><a href="//b.juw8.com/swap">花❤</a><a></a>
 </div>
