:new:更新磁力BT网址

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ h1{
 <a href="//daan.xuezizhai.com/index.php?s=80&module=answer&view=search">找答案</a><a class="m-head">游戏</a><a href="//cha.17173.com">游戏数据</a>
 <a href="//www.lolhelper.cn/">LOL隐藏分</a><a href="/v/s/">游戏攻略</a>
 <a class="m-head"></a><a href="//b.juw8.com/100749">小游戏</a><a href="//app.yzhan.in">分享助手</a><a href="//live.yzhan.nl">直播 电视<sup></sup></a>
-<a class="m-head">神器</a><a href="//m.99baiduyun.com">网盘搜索</a><a href="//www.ciligou.top">磁力BT</a><a href="//www.jiumodiary.com">电子书搜索</a>
+<a class="m-head">神器</a><a href="//m.99baiduyun.com">网盘搜索</a><a href="//clg.cm">磁力BT</a><a href="//www.jiumodiary.com">电子书搜索</a>
 <a class="m-head"></a><a href="//m.bookbao99.net">VIP小说</a><a href="//www.ciding.fun">VIP音乐</a><a href="//www.laodouban.com">云点播</a>
 <a class="m-head">实用</a><a href="//speed.neu.edu.cn">网速测试</a><a href="//m.oacn.org/sfz/">身份证号</a><a href="//catbox.moe">图床网盘</a>
 <a class="m-head"></a><a href="//cli.im/mob">二维码生成</a><a href="//app.xunjiepdf.com/ocr">音图识别转换</a><a href="//linshiyouxiang.net">临时邮箱</a>
