:new:更新统计代码

--- a/v/404/mtf404.html
+++ b/v/404/mtf404.html
@@ -1,28 +1,65 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<title>无标题文档</title>
-<style>
-	.title,.none{
-		display: none !important;
-	}
-	.mod_404 .wrapper{
-		top:10% !important;
-		margin: 0 !important;
-	}
-	.mod_hd{
-		margin-bottom:0 !important;
-	}
-	.mod_404 .desc .desc_link{
-		text-decoration: none !important;
-	}
-</style>
-</head>
-
-<body>
-	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://www.dm126.com" homePageName="DM126·分享助手·宝贝回家"></script>
-	<div class="none"><script src="https://s11.cnzz.com/z_stat.php?id=1259839027&web_id=1259839027" language="JavaScript"></script></div>
-</body>
-</html>
+<!doctype html>
+
+<html>
+
+<head>
+
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+
+	<title>无标题文档</title>
+
+	<style>
+		.title,
+		.none {
+
+			display: none !important;
+
+		}
+
+		.mod_404 .wrapper {
+
+			top: 10% !important;
+
+			margin: 0 !important;
+
+		}
+
+		.mod_hd {
+
+			margin-bottom: 0 !important;
+
+		}
+
+		.mod_404 .desc .desc_link {
+
+			text-decoration: none !important;
+
+		}
+	</style>
+
+</head>
+
+
+
+<body>
+
+	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8"
+		homePageUrl="http://www.dm126.com" homePageName="DM126·分享助手·宝贝回家"></script>
+
+	<div class="none">
+		<script>
+			var _hmt = _hmt || [];
+			(function () {
+				var hm = document.createElement("script");
+				hm.src = "https://hm.baidu.com/hm.js?c776d1e7e973b4ccb0398b4b7d35d55e";
+				var s = document.getElementsByTagName("script")[0];
+				s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
+	</div>
+
+</body>
+
+</html>
