--- a/v/g/mikupiano/index.html
+++ b/v/g/mikupiano/index.html
@@ -12,9 +12,12 @@
   <link href="https://fonts.loli.net/css?family=Quicksand:400" rel="stylesheet">
   <link charset="UTF-8" href="css/common.css" rel="stylesheet">
   <link charset="utf-8" href="css/mikutap.css" rel="stylesheet">
-  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
-  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/pixi.js/3.0.11/pixi.min.js" type="text/javascript"></script>
-  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/gsap/1.19.1/TweenMax.min.js" type="text/javascript"></script>
+  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/jquery/2.2.4/jquery.min.js"
+    type="text/javascript"></script>
+  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/pixi.js/3.0.11/pixi.min.js"
+    type="text/javascript"></script>
+  <script charset="utf-8" src="https://cdnjs.loli.net/ajax/libs/gsap/1.19.1/TweenMax.min.js"
+    type="text/javascript"></script>
   <script charset="UTF-8" src="js/common.min.js" type="text/javascript"></script>
   <script charset="utf-8" src="js/mikutap.min.js" type="text/javascript"></script>
 </head>
@@ -34,7 +37,8 @@
     </div>
   </div>
   <div id="scene_loading">
-    <hr size="1" color="#fff"> </div>
+    <hr size="1" color="#fff">
+  </div>
   <div id="scene_main">
     <div class="set">
       <p class="attention">点击 &amp; 滑动或者按任意键!</p>
@@ -44,6 +48,15 @@
   <div id="bt_fs">□全屏显示</div>
 </body>
 <div class="none">
-<script src="https://s19.cnzz.com/z_stat.php?id=1264570001&web_id=1264570001" language="JavaScript"></script>
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?c776d1e7e973b4ccb0398b4b7d35d55e";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
 </div>
+
 </html>
