:new:update .in/.nl 2 .cyou

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 
 <body>
-	<a class="m-back" href="//app.yzhan.in">返回</a>
+	<a class="m-back" href="//app.yzhan.cyou">返回</a>
 	<a class="m-web" href="/v/f/">收藏夹</a>
 	<h1>Y站导航</h1>
 	<div id="mAddressBar"></div>
@@ -115,7 +115,8 @@
 		<a href="//daan.xuezizhai.com/index.php?s=80&module=answer&view=search">找答案</a>
 		<a class="m-head">游戏</a><a href="//cha.17173.com">游戏数据</a>
 		<a href="//www.lolhelper.cn/">LOL隐藏分</a>
-		<a href="//p.yot.pw/100749">小游戏</a><a href="//app.yzhan.in">分享助手</a><a href="//live.yzhan.nl">直播聚合<sup></sup></a>
+		<a href="//p.yot.pw/100749">小游戏</a><a href="//app.yzhan.cyou">分享助手</a><a
+			href="//live.yzhan.cyou">直播聚合<sup></sup></a>
 		<a class="m-head">神器</a><a href="//m.99baiduyun.com">99网盘搜索</a><a href="//clg.cm">磁力狗</a><a
 			href="//www.jiumodiary.com">电子书搜索</a>
 		<a href="//www.laodouban.com">老豆瓣</a><a href="//catbox.moe">图床网盘</a>
@@ -123,7 +124,7 @@
 		<a href="//www.cn-ki.net">免费论文下载</a>
 		<a href="//tool.manmanbuy.com/m/history.aspx">查商品最低价</a><a href="//m.pingshu8.com/">听评书相声</a>
 		<a class="m-head">装扮</a><a href="//p.yot.pw/萌头像">萌头像</a><a href="//m.13400.com">铃声</a>
-		<a href="//share.yzhan.nl/h/">花体字</a><a href="//m.3dmgame.com/dl/">单机游戏下载</a><a href="/v/led/">LED滚动字</a>
+		<a href="//share.yzhan.cyou/h/">花体字</a><a href="//m.3dmgame.com/dl/">单机游戏下载</a><a href="/v/led/">LED滚动字</a>
 		<a class="m-head">动漫</a><a href="//hmacg.cn/bangumi/">追番表</a>
 		<a class="m-head m-b">MTF</a><a href="//p.yot.pw">发帖得❤</a><a href="//p.yot.pw/weal">赚❤</a><a
 			href="//p.yot.pw/swap">花❤</a>
